# filestor-rs

./: Cargo.toml  README.md
src/: lib.rs
src/cache/: redis.rs
src/common/: code.rs  mod.rs  store.rs
src/config/: aws_s3.rs  ceph.rs  db.rs  mod.rs  rabbitmq.rs  service.rs  store.rs  user.rs
src/db/: file.rs  mod.rs  user.rs  userfile.rs
src/db/mysql/: conn.rs
src/handler/: mod.rs
src/meta/: filemeta.rs
src/mq/: consumer.rs  mod.rs  producer.rs
src/service/chat/: Cargo.toml  abi.proto  build.rs
src/service/chat/examples/: client.rs  server.rs
src/service/chat/src/: client.rs  main.rs  server.rs
src/service/chat/src/pb/: abi.rs  mod.rs
src/store/: mod.rs
src/store/aws_s3/: aws_s3_conn.rs  mod.rs
src/store/ceph/: ceph_conn.rs  mod.rs
src/util/: mod.rs  resp.rs  shell.rs  util.rs
