[package]
name = "filestore-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chat-grpc-client"
path = "src/service/chat/examples/client.rs"

[[bin]]
name = "chat-grpc-server"
path = "src/service/chat/examples/server.rs"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
redis = { version = "0.22.3", features = ["tokio-native-tls-comp"] }
lazy_static = "1.4.0"
mysql = "23.0.1"
chrono = "0.4.23"
openssl-sys = "0.9.80"
sha1 = "0.10.5"
base16ct = { version = "0.1.1", features = ["alloc"] }
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
rust-s3 = { version = "0.32.3", features = ["default"] }
once_cell = "1.17.0"
# aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
# aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
structopt = "0.3.26"

serde_json = "1.0"

#rabbitmq dep
warp = "0.3.1"
futures = { version = "0.3.17", default-features = true }
tokio-amqp = "2.0.0"
thiserror = "1.0.30"
deadpool = "0.9.0"
deadpool-lapin = "0.10.0"
lapin = "2.1.1"