[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[dependencies]
futures = "0.3"
arc-swap = "1"
prost = "0.9"
tonic = "0.6"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
serde ={ version = "1.0", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.20"
dashmap = "5.0"
lazy_static = "1"
#tonic_live = "1"
anyhow = "1.0.68"

[build-dependencies]
tonic-build = "0.6"
